# Entity-Component-System

./: CMakeLists.txt  config.hpp  config.hpp.in
src/GUI/: BoxLayout.cpp  Drawable.cpp  GUIElement.cpp  GUISubsystem.cpp  Image.cpp  InteractableGraphics.cpp  Label.cpp  LabelElement.cpp  MouseListener.cpp  ScrollPanel.cpp  ScrollPanelElement.cpp
src/GUI/Editor/: GameObjectListElement.cpp
src/GUI/Editor/include/: GameObjectListElement.hpp
src/GUI/include/: BoxLayout.hpp  Drawable.hpp  GUIElement.hpp  GUISubsystem.hpp  IDrawable.hpp  IGUIElement.hpp  IInteractableGraphics.hpp  IMouseListener.hpp  Image.hpp  InteractableGraphics.hpp  Label.hpp  LabelElement.hpp  MouseListener.hpp  ScrollPanel.hpp  ScrollPanelElement.hpp
src/Game/: Game.cpp  GameObject.cpp  Loader.cpp  Logger.cpp  Main.cpp  Makefile  MovementScript.cpp  ResourceManager.cpp  SFMLGame.cpp  Transform.cpp  WeakPtrStorage.cpp
src/Game/include/: Component.hpp  ComponentFactory.hpp  ComponentsEnum.hpp  Game.hpp  GameObject.hpp  GameObjectPtr.hpp  IComponent.hpp  Loader.hpp  Logger.hpp  MovementScript.hpp  ResourceManager.hpp  SFMLGame.hpp  SceneContent.hpp  Tags.hpp  Transform.hpp  UnException.hpp  WeakPtrStorage.hpp
src/Physics/: Box2DWorld.cpp  BoxCollider.cpp  PhysicsBody.cpp  PhysicsSubsystem.cpp
src/Physics/include/: Box2DWorld.hpp  BoxCollider.hpp  IPhysicsBody.hpp  PhysicsBody.hpp  PhysicsSubsystem.hpp
src/Rendering/: Camera.cpp  CircleRenderer.cpp  Renderer.cpp  SpriteRenderer.cpp
src/Rendering/include/: Camera.hpp  CameraFactory.hpp  CircleRenderer.hpp  ICamera.hpp  IRenderer.hpp  Renderer.hpp  RenderingLayers.hpp  SpriteRenderer.hpp
